--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,7 +4,7 @@
   <img class="h-40px logo" alt="Logo" src="assets/logo.svg" />
   <!--begin::Logo-->
   <a href="./">
-      <span class="title">KAPSARC H2 Cost Analysis Model</span>
+      <span class="title">CAMP</span>
   </a>
   <!--end::Logo-->
   <!--begin::Toolbar-->
@@ -34,7 +34,7 @@
           <div class="header-logo">
           <a href="./">
               <img alt="Logo" src="assets/logo.svg" class="h-30px logo">
-              <h4 class="title">KAPSARC H2 Cost Analysis Model</h4>
+              <h4 class="title">CAMP Sankey</h4>
           </a>
           </div>  
 
@@ -48,17 +48,12 @@
                   <!--begin::Header Nav-->
                   <ul class="menu-nav">
                       <li class="menu-item menu-item-submenu menu-item-rel ">
-                          <a href="http://apps.kapsarc.org/appboard/khcam" target="_blank" class="menu-link">
+                          <a href="" target="_blank" class="menu-link">
                           <span class="font-size-h5">About</span>
                           <i class="menu-arrow text-white"></i>
                           </a>
                       </li>
-                      <li [class.menu-item-active] = "url === '/model'" class="menu-item menu-item-submenu menu-item-rel " data-menu-toggle="click" aria-haspopup="true">
-                          <a routerLink="/model" href="javascript:;"  (click)="burgerOpen = false" class="menu-link menu-toggle">
-                          <span class="font-size-h6">Model</span>
-                          <i class="menu-arrow text-white"></i>
-                          </a>
-                      </li>
+                      
                   </ul>
                   <!--end::Header Nav-->
               </div>
